나이브베이즈

--- a/scikit learn_Support Vector Machine(SVM)/scikit learn_Support Vector Machine(SVM).ipynb
+++ b/scikit learn_Support Vector Machine(SVM)/scikit learn_Support Vector Machine(SVM).ipynb
@@ -263,7 +263,7 @@
     }
    ],
    "source": [
-    "SVM=svm.SVC(kernel='rbf', C=1).fit(x,y) # 커널 rbf로 변경\n",
+    "SVM=svm.SVC(kernel='rbf', C=1).fit(x,y) # 커널 rbf로 변경  https://blog.naver.com/ssdyka/221254511921\n",
     "z = SVM.predict(np.c_[xx.ravel(),yy.ravel()])\n",
     "z = z.reshape(xx.shape)\n",
     "z = z.reshape(xx.shape)\n",
