--- a/Deep Learning/Tensorflow_Keras_Conv2D_강아지고양이분류(실프로젝트)/Tensorflow_Keras_Conv2D_강아지고양이분류(실프로젝트).ipynb
+++ b/Deep Learning/Tensorflow_Keras_Conv2D_강아지고양이분류(실프로젝트)/Tensorflow_Keras_Conv2D_강아지고양이분류(실프로젝트).ipynb
@@ -732,13 +732,7 @@
       "100/100 [==============================] - 27s 266ms/step - loss: 0.4519 - acc: 0.7845 - val_loss: 0.4979 - val_acc: 0.7650\n",
       "Epoch 59/100\n",
       "100/100 [==============================] - 27s 268ms/step - loss: 0.4475 - acc: 0.7900 - val_loss: 0.5009 - val_acc: 0.7550\n",
-      "Epoch 60/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 60/100\n",
       "100/100 [==============================] - 27s 265ms/step - loss: 0.4338 - acc: 0.8000 - val_loss: 0.4658 - val_acc: 0.7820\n",
       "Epoch 61/100\n",
       "100/100 [==============================] - 27s 270ms/step - loss: 0.4367 - acc: 0.8025 - val_loss: 0.4497 - val_acc: 0.7890\n",
